fix(calcdex): fixed PokeInfo pokemonName text overflowing
forgot to copy the styling during the PokeCalc refactoring

--- a/src/pages/Calcdex/PokeInfo.module.scss
+++ b/src/pages/Calcdex/PokeInfo.module.scss
@@ -48,6 +48,15 @@
   transform: translateY(-2px);
 }
 
+.pokemonName {
+  display: inline-block;
+  vertical-align: top;
+  max-width: 66px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
 .infoContainer {
   flex: 1.25;
 }
